Repaired tests